# tML-EC-QR

TMLEC_QRScan/: .gitignore  A.java  COMPOSABLE_FIX.md  FRONT_CAMERA_FIXES_SUMMARY.md  INTEGRATION_SUMMARY.md  NFC_IMPLEMENTATION_GUIDE.md  YOLO_CHEST_DETECTION_IMPLEMENTATION_GUIDE.md  YOLO_CHEST_DETECTION_TROUBLESHOOTING.md  YOLO_FRONT_CAMERA_IMPLEMENTATION.md  YOLO_INTEGRATION_STEPS.md  apply_yolo_integration.kt  build.gradle.kts  download_coco_model.py  download_coco_model_updated.py  gradle.properties  processImage_fix.kt  settings.gradle.kts
TMLEC_QRScan/app/: build.gradle  build.gradle.kts  lint-baseline.xml
TMLEC_QRScan/app/src/main/: AndroidManifest.xml
TMLEC_QRScan/app/src/main/cpp/: CMakeLists.txt  dummy.cpp
TMLEC_QRScan/gradle/: libs.versions.toml
TMLEC_QRScan/gradle/wrapper/: gradle-wrapper.properties
TMLEC_QRScan/model_setup/: convert_direct.py  convert_onnx.py  convert_onnx_simple.py  convert_onnx_to_tflite.py  convert_to_tflite.py  convert_trained_model.py  convert_yolov5_improved.py  convert_yolov5_improved_640.py  qr_data.yaml  requirements.txt  settings.json  verify_conversion.py  verify_model.py
TMLEC_QRScan/model_setup/datasets/qr_codes/: prepare_dataset.py
TMLEC_QRScan/model_setup/tf_model/: fingerprint.pb
TMLEC_QRScan/model_setup/yolov5_env/: pyvenv.cfg
TMLEC_QRScan/opencv/: build.gradle  build.gradle.kts
TMLEC_QRScan/python/: convert_and_test_model.py  create_sample_model.py  export_model_weights.py  respiratory_pattern_classification.py  run_model_export.py  test_model_on_app_data.py
TMLEC_QRScan/watchapp/: build.gradle.kts
(+135 files in other folders)
